2004-05-29  Dodji Seketeli  <dodji@gnome.org>

	* tests/test-functional-notation.sh,tests/test-inputs/functional-notation.css,
	tests/test-output-refs/test-functional-notation.out:
	Added regression tests for #143308
	
	* src/cr-parser.c:
	(cr_parser_parse_term): better handling unary operator.
	* src/cr-stylesheet.c : 
	(cr_stylesheet_dump): fprintf (fd, str) ; doesn't behave
	correctly when str contains a '%' char. Do fprintf (fd, "%", str)
	instead ;
	* src/cr-tknzr.c:
	(cr_tknzr_parse_ident):
	Properly roll back the input stream when an error occurs.
	This ChangeLog entry fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=143308.
	
2004-05-01  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-num.c: 
	(cr_num_to_string): don't output, say, 24generic when the number
	is a generic number. Otherwise, this breaks regression tests.

2004-04-30  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-num.c: 
	(cr_num_to_string): added the serialisation numbers of type
	NUM_INHERIT, NUM_AUTO, NUM_GENERIC
	* src/cr-rgb.[ch]: 
	added a "transparent" flag to the CRRgb.
	added "transparent" to gv_standard_colors.
	(cr_rgb_is_set_to_transparen):
	(cr_rgb_set_to_transparent):
	added these fonction to set/get the rgb transparent property.
	(cr_rgb_set_from_rgb): deep copy here.
	(cr_rgb_copy): added this to perform a deep copy.
	* src/cr-style.c: 
	(set_prop_margin_x_from_value): fix a stupid break missing bug.
	(cr_style_set_props_to_initial_values): 
	set the background-color property initial value to "transparent".
	(cr_style_num_prop_val_to_string): fix some formating bugs here.
	
2004-04-28  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-style.c: 
	(set_prop_font_size_from_value):
	fix a buglet in here.
	(cr_style_resolve_inherited_properties):
	When we resolve inheritance, set the *computed value*, not
	the specified value.
	Resolve inheritance for the "font-size" property.

2004-04-27  Dodji Seketeli  <dodji@gnome.org>

	* Makefile.am: fixed a error when launching make test.